# game-of-agents

./: .gitignore  CITATION.cff  GETTING_STARTED.md  README.md  package-lock.json  package.json  pyproject.toml
analysis/: __init__.py  chat_content.py  chip_metrics.py  cli.py  compare.py  export.py  export_api.py  implicit_coordination_probe.py  loader.py  metrics.py  monitor.py  offer_honesty.py  paper_runs.py  plots.py  report.py  runs.py  taxonomy.py  taxonomy_format.py  traces.py  transcript_scan.py  win_source.py
configs/: _shared_prompts.yaml  dashboard_default_run.yaml  exp_additive_clean.yaml  exp_additive_clean_6h.yaml  exp_additive_settlement.yaml  exp_adversarial_framing.yaml  exp_bad_actor.yaml  exp_baseline_tournament_claude.yaml  exp_chat_only_b1_aux.yaml  exp_competitive_framing.yaml  exp_full_heterogeneous_claude_gpt.yaml  exp_full_homo_claude.yaml  exp_full_homo_gpt.yaml  exp_full_homo_opus47.yaml  exp_hetero_additive_clean.yaml  exp_hetero_anonymized_ids.yaml  exp_hetero_opus47_sonnet46.yaml  exp_heterogeneous_baseline.yaml  exp_marketplace_only_b1_aux.yaml  exp_mock_local.yaml  exp_no_reviews.yaml  exp_no_reviews_additive.yaml  exp_pilot_actions_test.yaml  exp_pilot_haiku.yaml  exp_suspicious_buyers.yaml
convex/: README.md  http.ts  monitor.ts  profiles.ts  runs.ts  runtime.ts  schema.ts  tsconfig.json
dashboard/: .gitignore  README.md  package-lock.json  package.json
game_of_agents/: __init__.py  agent_logs.py  agent_server.py  agent_tools.py  api.py  cli.py  comment_feed.py  comment_models.py  config_defaults.py  convex_runtime.py  events.py  (+26 more)
(+136 files in other folders)
