[project]
name = "game-of-agents"
version = "0.1.0"
description = "Backend services for agent-run poker bot tournaments and marketplaces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.93.0",
    "convex>=0.7.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "modal>=1.3.0",
    "openskill>=6.2.0",
    "orjson>=3.10.18",
    "pokerkit>=0.7.3",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "trueskill>=0.4.5",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "scipy>=1.17.1",
]

[project.scripts]
goa = "game_of_agents.cli:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
